Replace deprecated new Integer(i) with recommended replacement
Compiler issuing warning message for deprecated expression.
Recommended replacement Integer.valueOf(i) is likely to perform better.